--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,6 @@
   <script type="text/javascript">
    {% include loadCss.js %}
   </script>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500" rel="stylesheet">
+
 </head>
