--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,7 +55,7 @@ layout: compress
     </div>
   </div>
 
-  <main class="site__content">
+  <main class="post__content">
     <div class="container">
       <article class="post-content" itemprop="articleBody">
 
