--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -23,6 +23,10 @@ body {
   flex: 1;
   background: #f9f9f9;
 }
+.post__content {
+  flex: 1;
+  background: white;
+}
 
 // responsive images
 img {
