--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -8,7 +8,7 @@ $error: #ff6161 !default;
 
 $bg-color: #fff !default;
 $light-bg-color: #f9f9f9;
-$text-color: #343851;
+$text-color: rgba(0,0,0,0.84);
 $heading-color: #313237;
 $link-color: $primary;
 $button-dark: #222325;
