--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -3,7 +3,7 @@ body {
   background-color: $bg-color;
   font-family: $font-stack;
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 2em;
   color: $text-color;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
@@ -18,6 +18,7 @@ body {
 p {
   margin-top: 0;
   margin-bottom: 1.25rem;
+  text-align:justify;
 }
 
 // Typography
