--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,10 +17,12 @@
   <meta name="msapplication-config" content="{{ '/assets/img/icons/browserconfig.xml?v=qA3OXqyw77' | relative_url }}">
   <meta name="theme-color" content="#ffffff">
 
+  {% if site.google_analytics %}
+    {% include ga.html %}
+  {% endif %}
+  
   {% if site.google_tag_manager %}
-
     {% include gtm.html %}
-
   {% endif %}
 
   <style class="inlineCSS">
