--- a/_includes/card.html
+++ b/_includes/card.html
@@ -34,10 +34,12 @@
         <time>{{ post.date | date: date_format }}</time>
       </span>
     </div>
-    {% if post.summary %}
-      <p>{{ post.summary | strip_html | truncatewords:20 }}</p>
-    {% else %}
-      <p>{{ post.content | strip_html | truncatewords: 20 }}</p>
-    {% endif %}
+    <div class="post-card__summary">
+      {% if post.summary %}
+        <p>{{ post.summary | strip_html | truncatewords:20 }}</p>
+      {% else %}
+        <p>{{ post.content | strip_html | truncatewords: 20 }}</p>
+      {% endif %}
+    </div>
   </a>
 </div>
