--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,10 @@
           {% include logo.svg %}
         </div>
       </a>
+      <div>
+        <div style="float: left;" class="only-desktop">Analyze feedback now!&nbsp;&nbsp;</div><a href="https://freetext.ai/signup" class="btn" style="float: left;">Get Started</a>
+      </div>
+      <!--
       <nav class="header__links">
         <div class="container header__links-wrapper">
           {% for item in site.navigation %}
@@ -19,7 +23,7 @@
         <span></span>
         <span></span>
         <span></span>
-      </div>
+      </div>-->
     </div>
   </div>
 </header>
