--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -16,7 +16,8 @@ $dark-light: #313237;
 $outline: #dbdbdb;
 $grey: #838c8d;
 
-$font-stack: "Montserrat","Helvetica Neue","Helvetica","Arial",sans-serif;
+// $font-stack: "Montserrat","Helvetica Neue","Helvetica","Arial",sans-serif;
+$font-stack: "Open Sans",sans-serif;
 
 // Breakpoints
 $xs: 0;
