--- a/_sass/jekyll-sleek.scss
+++ b/_sass/jekyll-sleek.scss
@@ -24,6 +24,7 @@
 // 5. Components
 @import
   "components/btn",
+  "components/cta",
   "components/card",
   "components/label",
   "components/pagination",
