--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,6 +35,8 @@
   <script type="text/javascript">
    {% include loadCss.js %}
   </script>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
+
 
 </head>
