--- a/_sass/components/_btn.scss
+++ b/_sass/components/_btn.scss
@@ -2,25 +2,35 @@
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-  position: relative;
-  display: inline-block;
-  padding: 18px 30px;
-  font-size: 11px;
+  tab-size: 4;
   font-family: inherit;
-  line-height: 1.5;
-  letter-spacing: 0.2em;
-  text-decoration: none;
-  text-transform: uppercase;
+  box-sizing: border-box;
+  border-style: solid;
+  --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgba(59, 130, 246, 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  text-decoration: inherit;
+  --tw-bg-opacity: 1;
+  background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+  border-color: transparent;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  display: inline-flex;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   white-space: nowrap;
-  cursor: pointer;
-  color: $bg-color;
-  background-color: $button-dark;
-  text-align: center;
-  border: 0;
-  border-radius: 0;
-  transition: all 0.45s cubic-bezier(0.25, 1, 0.33, 1);
-  outline: 0;
-
+  --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
   &::after {
     display: none;
   }
@@ -29,7 +39,7 @@ input[type="button"] {
   :focus,
   :active {
     color: $bg-color;
-    background-color: lighten($button-dark, 14%);
+    background-color: lighten(#277cea, 14%);
     outline: 0;
   }
 }
