--- a/_sass/layout/_grid.scss
+++ b/_sass/layout/_grid.scss
@@ -1,20 +1,24 @@
 .container {
+  // @include container(0);
+
+  // @include breakpoint($sm) {
+  //   // @include container(540px);
+  //   @include container(42rem);
+  // }
+
+  // @include breakpoint($md) {
+  //   // @include container(720px);
+  //   @include container(42rem);
+  // }
+
+  // @include breakpoint($lg) {
+  //   // @include container(960px);
+  //   @include container(42rem);
+  // }
+
+  // @include breakpoint($xl) {
+  //   // @include container(1170px);
+  //   @include container(42rem);
+  // }
   padding: 0 20px;
-  @include container(0);
-
-  @include breakpoint($sm) {
-    @include container(540px);
-  }
-
-  @include breakpoint($md) {
-    @include container(720px);
-  }
-
-  @include breakpoint($lg) {
-    @include container(960px);
-  }
-
-  @include breakpoint($xl) {
-    @include container(1170px);
-  }
 }
