--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -106,3 +106,11 @@
     padding-top: 10em;
   }
 }
+
+.only-desktop {
+  display: none;
+ 
+  @include breakpoint($sm) {
+    display: block;
+  }
+}
