--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -85,6 +85,22 @@ h2 {
   padding-right: 1.5rem;
 }
 
+h3 {
+  max-width: 42rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+li {
+  max-width: 40rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 ul {
   max-width: 36rem;
   margin-left: auto;
