--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,9 @@ layout: compress
       <h1 class="hero__title">{{ page.title }}</h1>
       <p class="hero__meta">
         <span>
-          <time>{{ page.date | date_to_string }}</time>&nbsp;&middot;
+          <div itemscope itemtype="http://schema.org/Article">
+            Updated: <time itemprop="dateModified" datetime="{{ page.last_modified_at | date_to_xmlschema }}"> {{page.last_modified_at | date_to_string }} </time>&nbsp;&middot;
+          </div>
         </span>
         <span>
             {% assign words = content | number_of_words %}
