--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -97,19 +97,27 @@ li {
   max-width: 40rem;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-left: 1rem;
 }
 
 ul {
-  max-width: 36rem;
+  max-width: 40rem;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-left: 1rem;
 }
 
 h4 {
   text-align: center;
   font-size: 0.7rem;
+}
+
+pre {
+  max-width: 80rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+code {
+  white-space : pre-wrap !important;
 }
