--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         </div>
       </a>
       <div>
-        <div style="float: left;" class="only-desktop">Analyze feedback now!&nbsp;&nbsp;</div><a href="https://freetext.ai/signup" class="btn" style="float: left;">Get Started</a>
+        <div style="float: left;" class="only-desktop">Analyze feedback now!&nbsp;&nbsp;</div><a href="https://currents.ai/signup" class="btn" style="float: left;">Get Started</a>
       </div>
       <!--
       <nav class="header__links">
